--- a/src/style.css
+++ b/src/style.css
@@ -1,1 +1,28 @@
 /* styles go here */
+.label {
+  display: block;
+}
+
+.fieldSet {
+  margin: 20px 2px;
+}
+
+.fieldSet:first-of-type {
+  margin-top: 0;
+}
+
+.fieldSet > :not(legend) {
+  margin-bottom: 10px;
+}
+
+.fieldSet > :last-child {
+  margin-bottom: 0;
+}
+
+.submitBtn {
+  margin: 0;
+}
+
+.loveCats > label {
+  display: inline;
+}
